[package]
name = "valorant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.13", features = ["blocking", "json", "rustls-tls"] }
rustls = "0.20.0"
error-chain = "0.12.4"
webpki-roots = "0.22"
