[package]
name = "valorant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
reqwest = { version = "0.11.13", features = ["blocking", "json", "rustls-tls"] }
rustls = "0.20.0"
anyhow = "1.0.67"
webpki-roots = "0.22"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.3.1"
thiserror = "1.0"
